--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,8 +8,8 @@ body {
 
 .tc-jumbotron {
 /*    height: 60em;   */
-    background-color: crimson;
-    color: yellow;
+    background-color: blue;
+    color: white;
 }
 
 .tc-text-center {
