--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,11 @@ body {
     font-size: 1.2em;
 }
 
+#version {
+    text-align: right;
+    font-size: .75sem;
+}
+
 #buttons, #endbutton {               
   text-align: center;    
   color: black;          
